Plugin Name: Events
Author: WPMU DEV

Change Log:
----------------------------------------------------------------------
1.9.3 - 
----------------------------------------------------------------------
- Added: Only one digit is allowed in hour field while creating a new event
- Fixed: Wrong URL in event calendar when event slug in main site is same as a subsite url


----------------------------------------------------------------------
1.9.2 - 2016-04-13
----------------------------------------------------------------------
- Fixed: Conflict with changes introduced in WP 4.5.

1.9.1 - 2015-11-13
----------------------------------------------------------------------
- Fixed: Times in calendar were always 12:00 am

1.9 - 2015-11-10
----------------------------------------------------------------------
- Enhance: New Admin Icon
- Enhance: Improved some admin styles
- Enhance: Improved gCal button styles
- Enhance: Wording changes for better UX
- Enhance: Improved UI feature in Settings Page
- Enhance: Some code refactoring in main file
- Fix: some warnings/notices
- Fix: PO file (missing some translations)
- Fix: Monthly calendar dates were being displayed wrong
- Fix: Weekly Calendar Module - Date Header was not correct
- Fix: Line breaks missing from description line in exported iCal file
- Fix: E+ and MarketPress interlinked but not usable
- Fix: Price when processing Paypal Request
- Fix: Event RSVPs attendees export
- Fix: Recurrent rules generator
- Fix: The URLs in screenshot doesnt have a trailing slash and in result shows 404 error, Events at the same time don't show on calendar
- Fix: Updated Facebook Graph URL
- Fix: Bug affecting newer versions of MySQL
- Fix: Plugin was not sending password link
- Fix: Weekly calendar month was not translatable
- Fix: When "Alert RSVPs on event modification" add-on is activated on site then saving settings in Events dont work
- Fix: Preview of Groupevents doesnt work as expected